# dns-parser

./: .gitignore  Cargo.toml  build.rs
examples/: sync_tcp_client.rs  sync_udp_client.rs
src/: builder.rs  enums.rs  error.rs  header.rs  lib.rs  name.rs  parser.rs  structs.rs
src/rdata/: a.rs  aaaa.rs  cname.rs  config.rs  mx.rs  ns.rs  opt.rs  ptr.rs  soa.rs  srv.rs  txt.rs
